--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "gatsby-source-filesystem": "^4.25.0",
     "gatsby-transformer-remark": "^5.25.1",
     "gatsby-transformer-sharp": "^4.25.0",
-    "lodash": "^4.17.21",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -66,6 +66,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.0",
     "gatsby-remark-code-titles": "^1.1.0",
+    "lint-staged": "^16.1.5",
     "prettier": "^2.8.3"
   }
 }
