--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lint:fix": "eslint . --ext .js,.jsx --ignore-path .gitignore --fix"
   },
   "dependencies": {
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
     "animejs": "^3.2.1",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.25.7",
@@ -34,7 +36,7 @@
     "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-offline": "^5.25.0",
     "gatsby-plugin-react-helmet": "^5.25.0",
-    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-robots-txt": "1.7.1",
     "gatsby-plugin-sharp": "^4.25.1",
     "gatsby-plugin-sitemap": "^5.25.0",
     "gatsby-plugin-styled-components": "^5.25.0",
